# flint

./: CMakeLists.txt  CONTRIBUTING.md  ChangeLog.txt  README.md  build.sh  convertTrajectories.sh  doxygen.conf  makefile_gpt_elems  prepare.sh  run.sh
doc/paper/: doc.tex
doc/talk/: presentation.tex
doc/talk/img/: beamline_setup.key  emittance_setup.key  quadrupole_setup.key
doc/talk/img/parallel_flow/: parallel_flow.tex
doc/talk/img/stepping/: 1.tex
setup/: setup_al.gdml  setup_beamline.gdml  setup_block.gdml  setup_filter.gdml  setup_standard.gdml  setup_wellen.gdml
setup/gdml-viewer/: Makefile  gdml.cpp
source/gpt/: G4Virtual.c  G4Virtual.h
source/include/: Containers.hh  FLInT.hh  Geometry.hh  OutputBase.hh  OutputDose.hh  OutputManager.hh  OutputTrajectories.hh  Particle.hh  ParticleTable.hh  Physics.hh  PolicyG4.hh  Primary.hh  StepLimiterProcess.hh  Stepping.hh  Tools.hh  XMLParser.hh  mainG4.hh
source/src/: Containers.cc  Geometry.cc  OutputDose.cc  OutputManager.cc  OutputTrajectories.cc  ParticleTable.cc  Physics.cc  PolicyG4.cc  Primary.cc  StepLimiterProcess.cc  Stepping.cc  XMLParser.cc  mainG4.cc
